--- a/chat-app/src/app/chat-message/chat-message.component.html
+++ b/chat-app/src/app/chat-message/chat-message.component.html
@@ -7,7 +7,7 @@
     <div class="messages"
         [ngClass]="{ 'msg-sent': !incoming, 'msg-receive': incoming }">
         <p>{{message.text}}></p>
-        <p class="time">{{message.author.name}} :: {message.sentAt | fromNow}}</p>
+        <p class="time">{{message.author.name}} :: {{message.sentAt | fromNow}}</p>
     </div>
     <div class="avatar"
         *ngIf="incoming">
