--- a/chat-app/src/app/chat-nav-bar/nav-bar.component.html
+++ b/chat-app/src/app/chat-nav-bar/nav-bar.component.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <div class="navbar-header">
             <a class="navbar-brand" href="https://ng-book.com/2">
-                <img src="${require('images/logos/ng-book-2-minibook.png')}"/>
+                <img src="./assets/images/logos/ng-book-2-minibook.png"/>
                 ng-book 2    
             </a>
         </div>
