--- a/chat-app/src/app/chat-thread/chat-thread.component.html
+++ b/chat-app/src/app/chat-thread/chat-thread.component.html
@@ -1,6 +1,6 @@
 <div class="media conversation">
     <div class="pull-left">
-        <img class=media-object avatar"
+        <img class="media-object avatar"
              src="{{thread.avatarSrc}}">
     </div>
     <div class="media-body">
