--- a/chat-app/src/app/app.component.html
+++ b/chat-app/src/app/app.component.html
@@ -1,7 +1,4 @@
 <div>
   <nav-bar></nav-bar>
-  <div class="container">
-    <chat-threads></chat-threads>
-    <chat-window></chat-window>
-  </div>
+  <router-outlet></router-outlet>
 </div>
