--- a/chat-app/src/app/chat-nav-bar/nav-bar.component.html
+++ b/chat-app/src/app/chat-nav-bar/nav-bar.component.html
@@ -10,6 +10,9 @@
             <button class="btn btn-primary" type="button">
                 Messages <span class="badge">{{unreadMessagesCount}}</span>
             </button>
+            <button *ngIf="this.authService.isLoggedIn()" class="btn btn-primary" type="button" (click)="logout()">
+                Logout
+            </button>
         </p>
     </div>
 </nav>
